--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,9 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
-  background-color: bisque;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
